# galvoplotter

./: LICENSE  README.md  default.json  setup.cfg  setup.py
.github/workflows/: unittests.yml
examples/: default.json  gpio_detect.py  joystick.py  light_circle_abort.py  light_simple_cross.py  mark_square.py  position_sync_grid.py
galvo/: __init__.py  consts.py  controller.py  mock_connection.py  usb_connection.py
test/: test.json  test_api.py  test_co2.py
